tests/neg/6697.check
-- [E057] Type Mismatch Error: tests/neg/6697.scala:6:35 ---------------------------------------------------------------
6 |  type Copy[O <: Off] = Of[Sup[O], Sub[O]]  // error
  |                                   ^
  |                                   Type argument Test.Sub[O] does not conform to upper bound Test.Sup[O]
  |
  |                                   Note: a match type could not be fully reduced:
  |
  |                                     trying to reduce  Test.Sub[O]
  |                                     failed since selector  O
  |                                     does not match  case Test.Of[sup, sub] => sub
  |                                     and cannot be shown to be disjoint from it either.
  |
  | longer explanation available when compiling with `-explain`
